syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message FindMaxRequest {
    int32 num = 1;
}

message FindMaxResponse {
    int32 max_num = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {}
    rpc FindMax(stream FindMaxRequest) returns (FindMaxResponse) {}
    rpc GetMax(stream FindMaxRequest) returns (stream FindMaxResponse) {}
}